--- a/Script/C7083-213221 Markdown.Rmd
+++ b/Script/C7083-213221 Markdown.Rmd
@@ -6,8 +6,9 @@ output:
   pdf_document:
     keep_tex: yes
     toc: yes
-always_allow_html: yes
 ---
+
+GitHub repository: https://github.com/Jabendah/C7083
 
 ```{r libraries, echo=FALSE, results='hide', message=FALSE, warning=FALSE}
 ## Setup
